@@ -243,6 +243,7 @@ public class TestGlobalSession {
 
   private HTTPServerTestHelper data = new HTTPServerTestHelper();
 
+  @SuppressWarnings("static-method")
   @Before
   public void setUp() {
     BaseResource.rewriteLocalhost = false;
@@ -377,7 +378,7 @@ public class TestGlobalSession {
     // Verify we fill in all of our known engines when none are persisted.
     session.config.enabledEngineNames = null;
     MetaGlobal mg = session.generateNewMetaGlobal();
-    assertEquals(new Long(GlobalSession.STORAGE_VERSION), mg.getStorageVersion());
+    assertEquals(Long.valueOf(GlobalSession.STORAGE_VERSION), mg.getStorageVersion());
     assertEquals(VersionConstants.BOOKMARKS_ENGINE_VERSION, mg.getEngines().getObject("bookmarks").getIntegerSafely("version").intValue());
     assertEquals(VersionConstants.CLIENTS_ENGINE_VERSION, mg.getEngines().getObject("clients").getIntegerSafely("version").intValue());
 
@@ -402,7 +403,7 @@ public class TestGlobalSession {
     session.config.enabledEngineNames.add("prefs");
 
     MetaGlobal mg = session.generateNewMetaGlobal();
-    assertEquals(new Long(GlobalSession.STORAGE_VERSION), mg.getStorageVersion());
+    assertEquals(Long.valueOf(GlobalSession.STORAGE_VERSION), mg.getStorageVersion());
     assertEquals(VersionConstants.BOOKMARKS_ENGINE_VERSION, mg.getEngines().getObject("bookmarks").getIntegerSafely("version").intValue());
     assertEquals(VersionConstants.CLIENTS_ENGINE_VERSION, mg.getEngines().getObject("clients").getIntegerSafely("version").intValue());
     assertEquals(0, mg.getEngines().getObject("addons").getIntegerSafely("version").intValue());
